--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *
 {
-        box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body{
@@ -41,15 +41,24 @@ body{
     margin: 15px;
 }
 
-.carta
+.carta-atras
 {
     height: 180px;
     width: 130px;
     position: relative;
-    background-color: #ff0084;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #33001b, #ff0084);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #33001b, #ff0084); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background-color: #ff0084;  
+    background: -webkit-linear-gradient(to right, #33001b, #ff0084);  
+    background: linear-gradient(to right, #33001b, #ff0084); 
+    border: 2px solid #ccc;
+    border-radius: 10px;
+}
+
+.carta-delante
+{
+    height: 180px;
+    width: 130px;
+    position: relative;
+    background-color: #fd2b97;
     border: 2px solid #ccc;
     border-radius: 10px;
 }
